--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   "scripts": {
     "dev": "node --watch --env-file=.env index.js",
     "start": "node --env-file=.env index.js",
-    "db:create": "psql -U ocaffe -d ocaffe -f ./data/create-db.sql",
-    "import": "node scripts/importData.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "db:create": "psql -U ocaffe -d ocaffe -f ./data/create-db.sql"
   },
   "repository": {
     "type": "git",
@@ -25,7 +23,6 @@
   },
   "homepage": "https://github.com/O-clock-Athenes/SB04-Ocoffee-Manu-Alriche#readme",
   "dependencies": {
-    "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "pg": "^8.16.0"
